--- a/HotelRoomBookingApplication/Views/Shared/_Layout.cshtml
+++ b/HotelRoomBookingApplication/Views/Shared/_Layout.cshtml
@@ -1,9 +1,16 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <style>
+        .id {
+            padding-top: 50px;
+            padding-bottom: 20px;
+            background-image: url('~/images/BackgroundImage1.jpg');
+        }
+    </style>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - HotelRoomBookingApplication</title>
+    <title>@ViewData["Title"] -Happy Live Inn</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -16,33 +23,41 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
     </environment>
 </head>
-<body>
+<body class="id">
     <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">HotelRoomBookingApplication</a>
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand" >Happy Live Inn</a>
+                </div>
+                <div class="navbar-collapse collapse">
+                    <ul class="nav navbar-nav">
+                        <li><a asp-area="" asp-controller="Home" asp-action="Index" style="font-size:medium"><b>Home</b></a></li>
+                        </ul>
+                        @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
+                    <div style="float:right; padding: 15px 0px">
+                        <a asp-area="" asp-controller="AdminApp" asp-action="LoginView" style="font-size:medium; color: gray"><b>Log In</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a asp-area="" asp-controller="Adminapp" asp-action="NewCustomer" style="font-size:medium; color: gray"><b>Sign Up</b></a>
+                    </div>
+                    
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        </nav>
+
+   
 
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
+
         @RenderBody()
-        <hr />
+        <br /><br /><br /><br /><br /><br /><br /><br /><br />
         <footer>
             <p>&copy; 2018 - HotelRoomBookingApplication</p>
         </footer>
