--- a/HotelRoomBookingApplication/wwwroot/css/site.css
+++ b/HotelRoomBookingApplication/wwwroot/css/site.css
@@ -3,8 +3,13 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    /*background-image:url("../images/BackgroundImage1.jpg");*/
 }
-
+.id {
+    padding-top: 50px;
+    padding-bottom: 20px;
+    /*background-image: url("../images/BackgroundImage1.jpg");*/
+}
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
