--- a/HotelRoomBookingApplication/wwwroot/css/site.css
+++ b/HotelRoomBookingApplication/wwwroot/css/site.css
@@ -3,12 +3,15 @@ for details on configuring this project to bundle and minify static web assets. 
 body {
     padding-top: 50px;
     padding-bottom: 20px;
-    /*background-image:url("../images/BackgroundImage1.jpg");*/
+    /*background-image: linear-gradient(rgba) url("../images/BackgroundImage1.jpg");*/
+    background: linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,.4)), url("../images/BackgroundImage1.jpg");
 }
+
 .id {
     padding-top: 50px;
     padding-bottom: 20px;
     /*background-image: url("../images/BackgroundImage1.jpg");*/
+    background: linear-gradient(rgba(255,255,255,.4), rgba(255,255,255,.4)), url("../images/BackgroundImage1.jpg");
 }
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
