--- a/HotelRoomBookingApplication/Views/Home/Index.cshtml
+++ b/HotelRoomBookingApplication/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">*@
+<link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
+<link rel="stylesheet" href="/css/site.css" />
+
+
 <style>
     .panel {
         width: 250px;
@@ -12,56 +17,71 @@
     }
 </style>
 <html>
-<body>
-<div>
-    <br />
-    <center><b><h6 style="font-family:Vivaldi; font-size:100px">Happy Live Inn</h6></b></center>  
-    <br />
-    <br />
-</div>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <div class="carousel-inner; " role="listbox">
-        <div class="item active">
-
-            <img src="~/images/fresh-hotel-executiveroom.jpg" style="height:600px; width:2000px" alt="ASP.NET" class="img-responsive" />
-
-            <div class="carousel-caption" role="option">
-
-                <b><h3>An iconic experience....Let's feel it!!</h3></b>
-
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/holiday-inn-hotel-and-suites-oakland-2533422671-4x3.jpg" style="height:600px; width:2000px" alt="Visual Studio" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-                <b><h3>The most restful days are spend here!!</h3></b>
-            </div>
-        </div>
-        <div class="item">
-            <img src="~/images/03ac5df68db3441893459f77c0b8743f.jpg" style="height:600px; width:2000px" alt="Microsoft Azure" class="img-responsive" />
-            <div class="carousel-caption" role="option">
-
-                <b><h3>Connect with the second life here!</h3></b>
-            </div>
-        </div>
+<body style="background-image:none">
+    <div>
+        <br />
+        <center><h6 style="font-family:Vivaldi; font-size:100px">Happy Live Inn</h6></center>
+        <br />
+        <br />
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
+  
 
 
-    </body>
+
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="~/images/fresh-hotel-executiveroom.jpg" style="height:600px; width:2000px" alt="ASP.NET" class="img-responsive" />
+
+                <div class="carousel-caption" role="option">
+
+                    <h3>An iconic experience....Let's feel it!!</h3>
+
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/holiday-inn-hotel-and-suites-oakland-2533422671-4x3.jpg" style="height:600px; width:2000px" alt="Visual Studio" class="img-responsive" />
+
+                <div class="carousel-caption" role="option">
+
+                    <h3>The most restful days are spend here!!</h3>
+
+                </div>
+            </div>
+            <div class="item">
+                <img src="~/images/03ac5df68db3441893459f77c0b8743f.jpg" style="height:600px; width:2000px" alt="Microsoft Azure" class="img-responsive" />
+
+                <div class="carousel-caption" role="option">
+
+                    <h3>Connect with the second life here!</h3>
+
+                </div>
+            </div>
+        </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>*@
+
+    <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="/js/site.js"></script>
+
+</body>
+
 </html>
