--- a/HotelRoomBookingApplication/Views/SearchApp/AvailableRooms.cshtml
+++ b/HotelRoomBookingApplication/Views/SearchApp/AvailableRooms.cshtml
@@ -7,91 +7,277 @@
     ViewData["Title"] = "AvailableRooms";
 }
 
+<html>
+<head>
+    <style>
+               /*
+        * Specific styles of signin component
+        */
+               /*
+        * General styles
+        */
+               body, html {
+                   height: 100%;
+                   background-repeat: no-repeat;
+                   background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+               }
+
+               .card-container.card {
+                   max-width: 1000px;
+                   height:1000px;
+                   padding: 40px 40px;
+               }
+
+               .btn {
+                   font-weight: 700;
+                   height: 36px;
+                   -moz-user-select: none;
+                   -webkit-user-select: none;
+                   user-select: none;
+                   cursor: default;
+               }
+
+               /*
+        * Card component
+        */
+               .card {
+                   background-color: #F7F7F7;
+                   /* just in case there no content*/
+                   padding: 20px 25px 30px;
+                   margin: 0 auto 25px;
+                   margin-top: 50px;
+                   /* shadows and rounded borders */
+                   -moz-border-radius: 2px;
+                   -webkit-border-radius: 2px;
+                   border-radius: 2px;
+                   -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                   -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+                   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+               }
+
+               .profile-img-card {
+                   width: 96px;
+                   height: 96px;
+                   margin: 0 auto 10px;
+                   display: block;
+                   -moz-border-radius: 50%;
+                   -webkit-border-radius: 50%;
+                   border-radius: 50%;
+               }
+
+               /*
+        * Form styles
+        */
+               .profile-name-card {
+                   font-size: 16px;
+                   font-weight: bold;
+                   text-align: center;
+                   margin: 10px 0 0;
+                   min-height: 1em;
+               }
+
+               .reauth-email {
+                   display: block;
+                   color: #404040;
+                   line-height: 2;
+                   margin-bottom: 10px;
+                   font-size: 14px;
+                   text-align: center;
+                   overflow: hidden;
+                   text-overflow: ellipsis;
+                   white-space: nowrap;
+                   -moz-box-sizing: border-box;
+                   -webkit-box-sizing: border-box;
+                   box-sizing: border-box;
+               }
+
+               .form-signin #inputEmail,
+               .form-signin #inputPassword {
+                   direction: ltr;
+                   height: 44px;
+                   font-size: 16px;
+               }
+
+               .form-signin input[type=email],
+               .form-signin input[type=password],
+               .form-signin input[type=text],
+               .form-signin button {
+                   width: 100%;
+                   display: block;
+                   margin-bottom: 10px;
+                   z-index: 1;
+                   position: relative;
+                   -moz-box-sizing: border-box;
+                   -webkit-box-sizing: border-box;
+                   box-sizing: border-box;
+               }
+
+               .form-signin .form-control:focus {
+                   border-color: rgb(104, 145, 162);
+                   outline: 0;
+                   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
+                   box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgb(104, 145, 162);
+               }
+
+               .btn.btn-signin {
+                   /*background-color: #4d90fe; */
+                   background-color: rgb(104, 145, 162);
+                   /* background-color: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));*/
+                   padding: 0px;
+                   font-weight: 700;
+                   font-size: 14px;
+                   height: 36px;
+                   -moz-border-radius: 3px;
+                   -webkit-border-radius: 3px;
+                   border-radius: 3px;
+                   border: none;
+                   -o-transition: all 0.218s;
+                   -moz-transition: all 0.218s;
+                   -webkit-transition: all 0.218s;
+                   transition: all 0.218s;
+               }
+
+                   .btn.btn-signin:hover,
+                   .btn.btn-signin:active,
+                   .btn.btn-signin:focus {
+                       background-color: rgb(12, 97, 33);
+                   }
+
+               .forgot-password {
+                   color: rgb(104, 145, 162);
+               }
+
+                   .forgot-password:hover,
+                   .forgot-password:active,
+                   .forgot-password:focus {
+                       color: rgb(12, 97, 33);
+                   }
+    </style>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+</head>
+<body>
+    <div class="container">
+        <div class="card card-container">
+          
+            <p id="profile-name" class="profile-name-card"></p>
 
 
 
-<form asp-action="SelectedRooms" asp-controller="SearchApp" method="post">
+            <form asp-action="SelectedRooms" asp-controller="SearchApp" method="post">
 
-    <div>
-        @*<img src="~/images/credit.png" />*@
-        @*<input asp-for="Model.HotelName" type="hidden" name="name" value="" />*@
-    </div>
+            <div>
+                @*<img src="~/images/credit.png" />*@
+            @*<input asp-for="Model.HotelName" type="hidden" name="name" value="" />*@
+        </div>
 
-    <div>
         <div>
-            <br />
-            <br />
-            <br />
-            <img src="@Model[0].HotelImage" height="400" width="900" alt="Oops!!" />
-        </div><br />
+            <div>
+                <br />
+                <br />
+                <br />
+                <img src="@Model[0].HotelImage" height="400" width="900" alt="Oops!!" />
+            </div><br />
 
-        <h1>
-            <label>@Model[0].HotelName</label>
-            <input type="hidden" value="@Model[0].HotelName" name="[0].HotelName" />
-        </h1><br />
-
-
-        <h4>
-            <label>@Model[0].City</label>
-            <input type="hidden" value="@Model[0].City" />
-        </h4>
+            <h1>
+                <label>@Model[0].HotelName</label>
+                <input type="hidden" value="@Model[0].HotelName" name="[0].HotelName" />
+            </h1><br />
 
 
-        <h4>
-            <label>Hotel Contact &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@Model[0].HotelContact</label>
-            <input type="hidden" value="@Model[0].HotelContact" name="[0].HotelContact" />
-        </h4>    <br /><br /><br />
-    </div>
+            <h4>
+                <label>@Model[0].City</label>
+                <input type="hidden" value="@Model[0].City" />
+            </h4>
 
-    <table width="1000">
-        <tr>
-            <td><h4><label>RoomId</label></h4></td>
-            <td><h4><label>RoomPrice</label></h4></td>
-            <td></td>
-        </tr>
 
-        @for (int i = 0; i < Model.Count; i++)
-        {
+            <h4>
+                <label>Hotel Contact &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@Model[0].HotelContact</label>
+                <input type="hidden" value="@Model[0].HotelContact" name="[0].HotelContact" />
+            </h4>    <br /><br /><br />
+        </div>
+
+        <table width="1000">
             <tr>
-
-
-
-                <td>
-                    <label>@Model[i].RoomId</label>
-                    <input type="hidden" value="@Model[i].RoomId" name="[@i].RoomId" />
-                </td>
-
-
-
-                <td>
-                    <label>@Model[i].RoomPrice</label>
-                    <input type="hidden" value="@Model[i].RoomPrice" name="[@i].RoomPrice" />
-                </td>
-
-
-                <td>
-                    <label>Select Room &nbsp;&nbsp;&nbsp;</label>
-                    <input type="checkbox" asp-for="@Model[i].Selected" style="transform:scale(1.5,1.5)" />
-                </td>
-
-                <td>
-                    @*<img src="@Model[i].H"/>*@
-                </td>
-
+                <td><h4><label>RoomId</label></h4></td>
+                <td><h4><label>RoomPrice</label></h4></td>
+                <td></td>
             </tr>
 
-        }
+            @for (int i = 0; i < Model.Count; i++)
+            {
+                <tr>
 
 
-    </table>
 
-    <div>
-        <div class="col-md-8"></div>
-        <div class="col-md-2">
-            <br />
-            <br />
-            <input type="submit" value="Book Rooms" class="btn btn-success" />
+                    <td>
+                        <label>@Model[i].RoomId</label>
+                        <input type="hidden" value="@Model[i].RoomId" name="[@i].RoomId" />
+                    </td>
+
+
+
+                    <td>
+                        <label>@Model[i].RoomPrice</label>
+                        <input type="hidden" value="@Model[i].RoomPrice" name="[@i].RoomPrice" />
+                    </td>
+
+
+                    <td>
+                        <label>Select Room &nbsp;&nbsp;&nbsp;</label>
+                        <input type="checkbox" asp-for="@Model[i].Selected" style="transform:scale(1.5,1.5)" />
+                    </td>
+
+                    <td>
+                        @*<img src="@Model[i].H"/>*@
+                    </td>
+
+                </tr>
+
+            }
+
+
+        </table>
+
+
+        <div>
+            <div class="col-md-8"></div>
+            <div class="col-md-2">
+                <br />
+                <br />
+                <input type="submit" value="Book Rooms" class="btn btn-success" />
+            </div>
         </div>
-    </div>
-</form>
+        </form>
+
+
+
+
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        
+    </div><!-- /card-container -->
+    </div><!-- /container -->
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
