--- a/HotelRoomBookingApplication/Views/Home/Index.cshtml
+++ b/HotelRoomBookingApplication/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
     <div>
         <br />
         <center><h6 style="font-family:Vivaldi; font-size:100px">Happy Live Inn</h6></center>
+        <h3 class="pull-right" style="font-family:Lucida Calligraphy">...find your freedom!</h3>
         <br />
         <br />
     </div>
