--- a/HotelRoomBookingApplication/Views/PaymentApp/Payment.cshtml
+++ b/HotelRoomBookingApplication/Views/PaymentApp/Payment.cshtml
@@ -94,7 +94,7 @@
 
                     <input value="DC" type="radio" name="payMode" style="transform:scale(1.5,1.5)" onClick="displayForm(this)" />&nbsp;&nbsp;&nbsp;Via Debit Card
 
-                    <div style="visibility:hidden; position:relative" id="ccformContainer">
+                    <div style=" position:relative" id="ccformContainer">
                         <br />
                         <br />
 
@@ -103,7 +103,7 @@
                                 <div class="form-group">
                                     <label>Enter Email: </label>
 
-                                    <input type="email" style="width:500px" placeholder="Email Address" required />
+                                    <input type="email" style="width:500px" placeholder="Email Address"  />
 
                                 </div>
                             </div>
@@ -113,7 +113,7 @@
                                 <div class="form-group">
                                     <label>Enter Name: </label>
 
-                                    <input type="text" style="width:500px" placeholder="Your Name here" required />
+                                    <input type="text" style="width:500px" placeholder="Your Name here"  />
 
                                 </div>
                             </div>
@@ -128,7 +128,7 @@
 
                         <p>
                             Credit Card Name :
-                            <input type="text" id="ccname" style="width:460px" placeholder="Credit Card Name" required>
+                            <input type="text" id="ccname" style="width:460px" placeholder="Credit Card Name" >
                         </p>
                         <br />
                         <div class="row">
@@ -142,7 +142,7 @@
                                                autocomplete="cc-number"
                                                minlength="16"
                                                id="ccnumber" 
-                                               required/>
+                                               />
                                         <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                         <label for="cardExpiry"><span class="hidden-xs">EXPIRATION</span><span class="visible-xs-inline">EXP</span> DATE</label>
 
                                         Month :
-                                        <select required>
+                                        <select >
                                             <option value="1">1</option>
                                             <option value="2">2</option>
                                             <option value="3">3</option>
@@ -170,7 +170,7 @@
                                             <option value="11">11</option>
                                             <option value="12">12</option>
                                         </select> <span>
-                                            Year : <select required>
+                                            Year : <select >
                                                 <option value="2015">2015</option>
                                                 <option value="2016">2016</option>
                                                 <option value="2017">2017</option>
@@ -193,7 +193,7 @@
                                                minlength="3"
                                                id="cccvc"
                                                autocomplete="cc-csc" 
-                                               required/>
+                                               />
                                     </div>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
 
                         <p>
                             Debit Card Name :
-                            <input type="text" id="dcname" style="width:460px" placeholder="Debit Card Name" required>
+                            <input type="text" id="dcname" style="width:460px" placeholder="Debit Card Name" >
                         </p>
                         
                         <div class="row">
@@ -237,7 +237,7 @@
                                                autocomplete="dc-number"
                                                minlength="16"
                                                id="dcnumber" 
-                                               required/>
+                                               />
                                         <span class="input-group-addon"><i class="fa fa-debit-card"></i></span>
                                     </div>
                                 </div>
@@ -251,7 +251,7 @@
                                         <label for="cardExpiry"><span class="hidden-xs">EXPIRATION</span><span class="visible-xs-inline">EXP</span> DATE</label>
 
                                         Month :
-                                        <select required>
+                                        <select >
                                             <option value="1">1</option>
                                             <option value="2">2</option>
                                             <option value="3">3</option>
@@ -265,7 +265,7 @@
                                             <option value="11">11</option>
                                             <option value="12">12</option>
                                         </select> <span>
-                                            Year : <select required>
+                                            Year : <select >
                                                 <option value="2015">2015</option>
                                                 <option value="2016">2016</option>
                                                 <option value="2017">2017</option>
@@ -288,103 +288,13 @@
                                                minlength="3"
                                                id="dccvc"
                                                autocomplete="dc-csc" 
-                                               required/>
+                                               />
                                     </div>
                                 </div>
                             </div>
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            @*<label>Enter your Debit card details :</label>
-            <br>
-            <br>
-
-            <p>
-                Name on Debit Card :
-                <input type="text" id="dcname" style="width:320px" placeholder="Debit Card Name">
-            </p>
-            <br />
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="form-group">
-                        <label for="cardNumber">CARD NUMBER</label>
-                        <div class="input-group">
-                            <input type="tel"
-                                   class="form-control"
-                                   placeholder="Valid Card Number"
-                                   autocomplete="dc-number"
-                                   minlength="16"
-                                   id="dcnumber" />
-                            <span class="input-group-addon"><i class="fa fa-credit-card"></i></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-
-
-            <p>
-                <div class="row">
-                    <div class="col-xs-7 col-md-7">
-                        <div class="form-group">
-                            <label for="cardExpiry"><span class="hidden-xs">EXPIRATION</span><span class="visible-xs-inline">EXP</span> DATE</label>
-
-                            Month :
-                            <select>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                                <option value="5">5</option>
-                                <option value="6">6</option>
-                                <option value="7">7</option>
-                                <option value="8">8</option>
-                                <option value="9">9</option>
-                                <option value="10">10</option>
-                                <option value="11">11</option>
-                                <option value="12">12</option>
-                            </select> <span>
-                                Year : <select>
-                                    <option value="2015">2015</option>
-                                    <option value="2016">2016</option>
-                                    <option value="2017">2017</option>
-                                    <option value="2018">2018</option>
-                                    <option value="2019">2019</option>
-                                    <option value="2020">2020</option>
-                                    <option value="2021">2021</option>
-                                </select>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-7 col-md-5">
-                        <div class="form-group">
-                            <label for="cardCVC">CV CODE</label>
-                            <input type="tel"
-                                   class="form-control"
-                                   placeholder="CVC"
-                                   minlength="3"
-                                   id="dccvc"
-                                   autocomplete="dc-csc" />
-                        </div>
-                    </div>
-                </div>*@
 
                     </div>
 
@@ -393,7 +303,7 @@
                     <div id="float_right">
 
                         @*<a asp-controller="PaymentApp" asp-action="PostValues" class="btn btn-primary" asp-route="">Pay Now</a>*@
-                        <input type="submit" class="btn btn-primary" value="Pay Now" />
+                        <input type="submit" class="btn btn-primary" value="Pay Now" id="btnsubmit"/>
                     </div>
                 </form>
             </div>
